Added result to operations; reorganized account services

--- a/src/main/resources/application-nolocal.properties
+++ b/src/main/resources/application-nolocal.properties
@@ -16,6 +16,9 @@ blockchain.account.publickey.password=${PUBLICKEYS_PASSWORD}
 escrow.seller.account.password=${SELLERS_PASSWORD}
 escrow.buyer.account.password=${BUYERS_PASSWORD}
 
-blockchain.network.endpoint=${BLOCKCHAIN_MAIN_ENDPOINT}
 blockchain.mps.account.privk=${BLOCKCHAIN_MPS_PRIVATEKEY}
 blockchain.mps.account.pubk=${BLOCKCHAIN_MPS_PUBLICKEY}
+blockchain.mps.account.address=${BLOCKCHAIN_MPS_ADDRESS}
+blockchain.network.endpoint=${BLOCKCHAIN_MAIN_ENDPOINT}
+blockchain.funds.seller.amount=${BLOCKCHAIN_SELLER_FUNDS}
+blockchain.funds.buyer.amount=${BLOCKCHAIN_BUYER_FUNDS}
