Added env vars for gas price

--- a/src/main/resources/application-nolocal.properties
+++ b/src/main/resources/application-nolocal.properties
@@ -20,5 +20,8 @@ blockchain.mps.account.privk=${BLOCKCHAIN_MPS_PRIVATEKEY}
 blockchain.mps.account.pubk=${BLOCKCHAIN_MPS_PUBLICKEY}
 blockchain.mps.account.address=${BLOCKCHAIN_MPS_ADDRESS}
 blockchain.network.endpoint=${BLOCKCHAIN_MAIN_ENDPOINT}
+
 blockchain.funds.seller.amount=${BLOCKCHAIN_SELLER_FUNDS}
 blockchain.funds.buyer.amount=${BLOCKCHAIN_BUYER_FUNDS}
+blockchain.collections.seller.gasprice=${BLOCKCHAIN_SELLER_GASPRICE}
+blockchain.collections.buyer.gasprice=${BLOCKCHAIN_BUYER_GASPRICE}
