--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<spring.framework.version>5.1.20.RELEASE</spring.framework.version>
 		<spring.amqp.version>2.1.18.RELEASE</spring.amqp.version>
 		<okhttp3.version>4.8.1</okhttp3.version>
+		<webapp-runner.version>9.0.41.0</webapp-runner.version>
 	</properties>
 
 	<dependencyManagement>
