--- a/bc-web/pom.xml
+++ b/bc-web/pom.xml
@@ -96,8 +96,8 @@
                 </execution>
             </executions>
         </plugin-->
-        <plugin>
-      <!-- Build an executable JAR -->
+        <!-- plugin>
+      <Build an executable JAR 
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jar-plugin</artifactId>
       <configuration>
@@ -109,7 +109,26 @@
           </manifest>
         </archive>
       </configuration>
-    </plugin>
+    </plugin-->
+    <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>build-info</goal>
+            </goals>
+            <configuration>
+              <additionalProperties>
+                <encoding.source>${project.build.sourceEncoding}</encoding.source>
+                <encoding.reporting>${project.reporting.outputEncoding}</encoding.reporting>
+                <java.source>${maven.compiler.source}</java.source>
+                <java.target>${maven.compiler.target}</java.target>
+              </additionalProperties>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
 		</plugins>
 	</build>
 </project>
