--- a/bc-web/src/main/resources/application.properties
+++ b/bc-web/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # environment
 ## server
-server.servlet.contextPath=/mps
+server.servlet.contextPath=/mps-blockchain
 server.port=8087
 
 # datasource settings
