--- a/bc-web/src/main/resources/application.properties
+++ b/bc-web/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# environment
+## server
+server.servlet.contextPath=/mps-blockchain
+server.port=8087
+
 # datasource settings
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
