--- a/bc-web/pom.xml
+++ b/bc-web/pom.xml
@@ -46,7 +46,6 @@
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>okhttp</artifactId>
-			<!--version>4.8.1</version-->
 		</dependency>
 		<dependency>
 			<groupId>org.passay</groupId>
@@ -74,4 +73,27 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+				<execution>
+					<goals>
+						<goal>build-info</goal>
+					</goals>
+					<configuration>
+						<additionalProperties>
+						<encoding.source>${project.build.sourceEncoding}</encoding.source>
+						<encoding.reporting>${project.reporting.outputEncoding}</encoding.reporting>
+						<java.source>${maven.compiler.source}</java.source>
+						<java.target>${maven.compiler.target}</java.target>
+						</additionalProperties>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
